mudança do título

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="pt-br">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Desenvolvedor Front End & UX/UI Designer Localizado em Recife">
+  <meta name="description" content="Desenvolvedor Front End & UX/UI Designer Localizado em Recife/PE">
   <title>Portfolio</title>
   <link rel="stylesheet" href="./css/style.min.css">
   <link rel="shortcut icon" href="./img/favicon.svg" type="image/x-icon">
