realizado correções de responsividade

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Desenvolvedor Front End & UX/UI Designer Localizado em Recife/PE">
   <title>Portfolio</title>
-  <link rel="stylesheet" href="./css/style.min.css">
+  <link rel="stylesheet" href="./css/style.css">
   <link rel="shortcut icon" href="./img/favicon.svg" type="image/x-icon">
 </head>
 <body>
@@ -88,10 +88,9 @@
   </section>
 
   <footer class="footer" id="contato">
-    
     <div class="footer-container">
       <div class="footer-apresentacao">
-        <p class="footer-texto" >Estou disponível para novos projetos no momento Enre em contato comigo e marcamos uma conversa. 👋</p>
+        <p class="footer-texto" >Estou disponível para novos projetos no momento Entre em contato comigo e marcamos uma conversa. 👋</p>
       </div>
       <div class="footer-contato">
         <div class="footer-contato-email">
