realizada novas alterações na responsividade

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   
   <header class="header">
     <div class="header-container" >
-      <a class="logo" href="#home"><img src="./img/marca.svg" alt="logotipo" width="359px" height="47px"></a>
+      <a class="logo" href="#home"><img src="./img/marca.svg" alt="logotipo"></a>
       <nav>
         <ul class="header-menu">
           <li><a href="#experiencia">Experiência</a></li>
@@ -64,6 +64,7 @@
             <h3>cursos intensivos</h3>
             <ul>
               <li>UX Design & UI Design <span>56h</span></li>
+              <li>Front End para Iniciantes <span>72h</span> </li>
               <li>Front End para Iniciantes <span>72h</span> </li>
             </ul>
           </div>
