--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <title>Portfolio</title>
   <link rel="stylesheet" href="./css/style.min.css">
   <link rel="shortcut icon" href="./img/favicon.svg" type="image/x-icon">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
   
